# fusion_ws

./: global_cloud.pcd
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/boine_orbslam/: boine_orbslam
devel/lib/pkgconfig/: boine_orbslam.pc  visual_imu_fusion.pc
devel/lib/visual_imu_fusion/: visual_imu_fusion_node
devel/share/boine_orbslam/cmake/: boine_orbslamConfig.cmake
devel/share/visual_imu_fusion/cmake/: visual_imu_fusionConfig.cmake
src/poine_orbslam/: CMakeLists.txt
src/poine_orbslam/cmake_modules/PaxHeader/: FindBLAS.cmake  FindCholmod.cmake  FindEigen3.cmake  FindG2O.cmake  FindLAPACK.cmake  FindOpenNI2.cmake  FindRealSense.cmake  FindSuiteSparse.cmake
src/poine_orbslam/map/PaxHeader/: mapdata.txt
src/poine_orbslam/src/: Map.cc  PangolinViewer.cc  System.cc  System.h  Tracking.cc  Tracking.h  poine_orbslam.cc  pointcloudmapping.cc  pointcloudmapping.h  view_map.cc
src/viorbslam/: CCNY_ORB_SLAM.launch  CCNY_ORB_SLAM_real.launch  CMakeLists.txt  package.xml
src/viorbslam/Setting/: SETTING (copy).yaml  realsenseSetting.yaml
src/viorbslam/dataBag/: record.sh
src/viorbslam/include/: System.h  Tracking.h  pointcloudmapping.h
src/viorbslam/src/: System.cc  Tracking.cc  pointcloudmapping.cc  ros_rgbd.cc
src/visual_imu_fusion/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  visual_imu_fusion.xml  visual_imu_fusion.xml~
src/visual_imu_fusion/include/visual_imu_fusion/: visual_imu_fusion.h  visual_imu_fusion_ros.h  visual_imu_fusion_ros.h~
src/visual_imu_fusion/launch/: complementary_filter.launch~  imu_launch.launch~  visual_imu_fusion.launch  visual_imu_fusion.launch~
src/visual_imu_fusion/pose/: test1.txt  test2.txt  test3.txt
src/visual_imu_fusion/src/: complementary_filter_node.cpp~  visual_imu_fusion.cpp  visual_imu_fusion_node.cpp  visual_imu_fusion_ros.cpp
